--- a/personalwebsite/app/components/NavBar.module.scss
+++ b/personalwebsite/app/components/NavBar.module.scss
@@ -1,42 +1,23 @@
 .navbar {
-    .listbox {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        margin: 0px;
-        padding: 0px;
-        list-style-type: none;
-        
-    }
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 0px;
+    padding: 0px;
 
-    .listbox > li {
+    > a {
         flex-grow: 1;
         text-align: center;
         background-color: black;
+        color: white;
         transition: background-color 0.6s ease, color 0.6s ease;
-
-        > a {
-            color: white;
-            flex-grow: 1;
-        }
+        flex-grow: 1;
 
 
         &:hover {
             background-color: white;
+            color:black;
         }
-
-
-
         
-    }
-
-    // .listbox > li > a {
-    //     color: white;
-    //     transition: color 0.6s ease;
-    //     flex-grow: 1;
-
-    //     &:hover {
-    //         color: black;
-    //     }
-    // }
+    }   
 }
