--- a/personalwebsite/app/components/NavBar.module.scss
+++ b/personalwebsite/app/components/NavBar.module.scss
@@ -4,20 +4,25 @@
     justify-content: space-evenly;
     margin: 0px;
     padding: 0px;
-
-    > a {
+    
+    > div {
         flex-grow: 1;
         text-align: center;
         background-color: black;
-        color: white;
         transition: background-color 0.6s ease, color 0.6s ease;
-        flex-grow: 1;
-
+        justify-content: center;
 
         &:hover {
             background-color: white;
-            color:black;
+            * {
+                color: black;
+            }
         }
-        
-    }   
+
+        * {
+            color: white;
+            transition: color 0.6 ease;
+        }
+    }
+
 }
