--- a/personalwebsite/app/components/NavBar.module.scss
+++ b/personalwebsite/app/components/NavBar.module.scss
@@ -11,6 +11,7 @@
         background-color: black;
         transition: background-color 0.6s ease, color 0.6s ease;
         justify-content: center;
+        align-items: center;
 
         &:hover {
             background-color: white;
