--- a/personalwebsite/app/components/Footer.module.scss
+++ b/personalwebsite/app/components/Footer.module.scss
@@ -59,6 +59,10 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            
+            * {
+                font-size: clamp(1rem,2vw,4rem);
+            }
         }
     }
 }
